Fix styles. - Fix palettes direction & height on iOS. - Reduce click area of the palette name.

--- a/src/components/Palette.module.scss
+++ b/src/components/Palette.module.scss
@@ -45,11 +45,15 @@
   }
 
   .palette-name {
+    width: fit-content;
     color: gray;
     padding: 5px;
     font: {
       size: 20px;
       weight: 700;
+    }
+    &:hover {
+      color: darkgray;
     }
   }
 
